@@ -1,40 +1,36 @@
-MANIFEST
-Changes
-README
-API.h
-API.xs
-API.pm
-Type.pm
-Struct.pm
-Callback.pm
-Test.pm
-TYPEMAP
-TODO
-Makefile.PL
 api-test/API_test.cpp
 api-test/API_test.def
 api-test/API_test.dsp
 api-test/API_test.dsw
+api-test/API_test.h
 api-test/API_test.sln
 api-test/API_test.suo
 api-test/API_test.vcproj
-api-test/API_test.h
-api-test/Makefile
-api-test/StdAfx.cpp
-api-test/StdAfx.h
-api-test/Release/API_test.dll
-api-test/Release/API_test.lib
 api-test/Debug/API_test.dll
 api-test/Debug/API_test.lib
+api-test/Release/API_test.dll
+api-test/Release/API_test.lib
+api-test/StdAfx.cpp
+api-test/StdAfx.h
+API.h
+API.pm
+API.xs
 API_test.dll
-t/00_API.t
-t/01_Struct.t
-t/02_GetProcess.t
-t/03_undef.t
-t/04_rt_48006.t
+API_test64.dll
+call_asm_x64_gnu.s
+call_asm_x64_msvc.asm
+call_i686.h
+call_x86_64.h
+Callback.pm
 Callback/Callback.xs
 Callback/Makefile.PL
 Callback/t/02_Callback.t
+Callback/t/03_Jim_Shaw.t
+Changes
+Makefile.PL
+MANIFEST
+META.yml			Module meta-data (added by MakeMaker)
+README
 samples/callback1.pl
 samples/callback2.pl
 samples/callback3.pl
@@ -46,8 +42,19 @@ samples/hideconsole.pl
 samples/kernel32.html
 samples/kernel32.pl
 samples/locales.pl
+samples/packing.pl
 samples/resolution.pl
 samples/rndcolors.pl
-samples/wininfo.pl
 samples/Win32/kernel32.pm
-META.yml                                 Module meta-data (added by MakeMaker)
+samples/wininfo.pl
+Struct.pm
+t/00_API.t
+t/01_Struct.t
+t/02_GetProcess.t
+t/03_undef.t
+t/04_rt_48006.t
+t/05_more_struct.t
+Test.pm
+TODO
+Type.pm
+TYPEMAP
